added animation to css

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
           <a class="intro__link" href="#">View all products</a>
         </div>
         <div class="intro__drinks">
-          <img src="assets/drink/img4.png" alt="coca-cola" width="70" height="85">
-          <img src="assets/drink/img2.png" alt="coca-cola zero" width="70" height="85">
-          <img src="assets/drink/img1.png" alt="fanta" width="70" height="85">
-          <img src="assets/drink/img3.png" alt="sprite" width="70" height="85">
+          <img class="intro__drinks-img" src="assets/drink/img4.png" alt="coca-cola" width="70" height="85">
+          <img class="intro__drinks-img" src="assets/drink/img2.png" alt="coca-cola zero" width="70" height="85">
+          <img class="intro__drinks-img" src="assets/drink/img1.png" alt="fanta" width="70" height="85">
+          <img class="intro__drinks-img" src="assets/drink/img3.png" alt="sprite" width="70" height="85">
         </div>
       </div>
     </section>
